--- a/.gitignore
+++ b/.gitignore
@@ -71,9 +71,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-Temp/*
-Library/*
-Build/*
+Temp/
+Library/
+Build/
 [Ll]ibrary/
 
 Assembly-CSharp.csproj
