--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Assets/FR2_Cache.asset.meta
 Assets/AllIn1SpriteShader/Documentation.pdf.meta
 Packages/com.singularitygroup.hotreload/Documentation/Documentation.pdf.meta
 Library/ArtifactDB
+Assembly-CSharp.csproj
